--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,12 @@ uuid = "4f8bad6f-3ad2-450c-8504-9b46232651f7"
 authors = ["Mosè Giordano <mose@gnu.org> and contributors"]
 version = "0.1.0"
 
+[deps]
+Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+
 [compat]
+JSON = "0.21.3"
 julia = "1.6"
 
 [extras]
